--- a/easybank-landing-page-master/index.html
+++ b/easybank-landing-page-master/index.html
@@ -13,19 +13,25 @@
   </head>
 
   <body>
-    <nav class="flex-container">
+    <nav class="flex-container nav-bar">
       <div>
         <img alt="easybank's logo" id="logo" src="/images/logo.svg" />
       </div>
-      <div>
-        Home About Contact Blog Careers
+      <div class="nav-link-div">
+        <a class="nav-link" href="#">Home</a>
+        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" href="#">Contact</a>
+        <a class="nav-link" href="#">Blog</a>
+        <a class="nav-link" href="#">Careers</a>
       </div>
-      <button>Request Invite</button>
+      <div>
+        <button class="btn">Request Invite</button>
+      </div>
     </nav>
     <section id="section1">
-      <div class="flex=flex-container">
+      <div id="section1-div">
         <div id="next-generation">
-          <h1>
+          <h1 id="main-title">
             Next generation digital banking
           </h1>
           <p>
@@ -33,9 +39,14 @@
             one-stop-shop for spending, saving, budgeting, investing, and much
             more.
           </p>
-          <button>Request Invite</button>
+          <button class="btn">Request Invite</button>
         </div>
         <div>
+          <img
+            alt="blue and green spots"
+            id="spots"
+            src="/images/bg-intro-desktop.svg"
+          />
           <img
             alt="photo of mobile phones"
             id="mobile-phones"
@@ -45,13 +56,15 @@
       </div>
     </section>
     <section id="section2">
-      <h2>
-        Why choose Easybank?
-      </h2>
-      <p>
-        We leverage Open Banking to turn your bank account into your financial
-        hub. Control your finances like never before.
-      </p>
+      <div id="choose-easybank">
+        <h2>
+          Why choose Easybank?
+        </h2>
+        <p>
+          We leverage Open Banking to turn your bank account into your financial
+          hub. Control your finances like never before.
+        </p>
+      </div>
       <div class="flex-container">
         <div>
           <img
@@ -195,7 +208,7 @@
           </div>
         </div>
         <div>
-          <button>Request Invite</button>
+          <button class="btn">Request Invite</button>
           <h6>
             © Easybank. All Rights Reserved
           </h6>
