--- a/easybank-landing-page-master/index.html
+++ b/easybank-landing-page-master/index.html
@@ -39,7 +39,7 @@
             one-stop-shop for spending, saving, budgeting, investing, and much
             more.
           </p>
-          <button class="btn">Request Invite</button>
+          <button class="btn" id="btn2">Request Invite</button>
         </div>
         <div>
           <img
@@ -57,10 +57,10 @@
     </section>
     <section id="section2">
       <div id="choose-easybank">
-        <h2>
+        <h2 class="secondary-title">
           Why choose Easybank?
         </h2>
-        <p>
+        <p class="p-section2">
           We leverage Open Banking to turn your bank account into your financial
           hub. Control your finances like never before.
         </p>
@@ -75,7 +75,7 @@
           <h3>
             Online Banking
           </h3>
-          <p>
+          <p class="p-section2">
             Our modern web and mobile applications allow you to keep track of
             your finances wherever you are in the world.
           </p>
@@ -89,7 +89,7 @@
           <h3>
             Simple Budgeting
           </h3>
-          <p>
+          <p class="p-section2">
             See exactly where your money goes each month. Receive notifications
             when you’re close to hitting your limits.
           </p>
@@ -103,7 +103,7 @@
           <h3>
             Fast Onboarding
           </h3>
-          <p>
+          <p class="p-section2">
             We don’t do branches. Open your account in minutes online and start
             taking control of your finances right away.
           </p>
@@ -117,7 +117,7 @@
           <h3>
             Open API
           </h3>
-          <p>
+          <p class="p-section2">
             Manage your savings, investments, pension, and much more from one
             account. Tracking your money has never been easier.
           </p>
@@ -125,86 +125,92 @@
       </div>
     </section>
     <section id="section3">
-      <h2>
+      <h2 class="secondary-title">
         Latest Articles
       </h2>
       <div class="flex-container">
-        <div>
+        <card class="card">
           <img alt="money" class="photo" src="images/image-currency.jpg" />
-          <h6>
-            By Claire Robinson
-          </h6>
-          <h3>
-            Receive money in any currency with no fees
-          </h3>
-          <p>
-            The world is getting smaller and we’re becoming more mobile. So why
-            should you be forced to only receive money in a single …
-          </p>
-        </div>
-        <div>
+          <div class="card-text">
+            <h6>
+              By Claire Robinson
+            </h6>
+            <h3 class="subtitle">
+              Receive money in any currency with no fees
+            </h3>
+            <p class="p-section3">
+              The world is getting smaller and we’re becoming more mobile. So
+              why should you be forced to only receive money in a single …
+            </p>
+          </div>
+        </card>
+        <card class="card">
           <img
             alt="restaurant"
             class="photo"
             src="images/image-restaurant.jpg"
           />
-          <h6>
-            By Wilson Hutton
-          </h6>
-          <h3>
-            Treat yourself without worrying about money
-          </h3>
-          <p>
-            Our simple budgeting feature allows you to separate out your
-            spending and set realistic limits each month. That means you …
-          </p>
-        </div>
-        <div>
+          <div class="card-text">
+            <h6>
+              By Wilson Hutton
+            </h6>
+            <h3 class="subtitle">
+              Treat yourself without worrying about money
+            </h3>
+            <p class="p-section3">
+              Our simple budgeting feature allows you to separate out your
+              spending and set realistic limits each month. That means you …
+            </p>
+          </div>
+        </card>
+        <card class="card">
           <img alt="airplane" class="photo" src="images/image-plane.jpg" />
-          <h6>
-            By Wilson Hutton
-          </h6>
-          <h3>
-            Take your Easybank card wherever you go
-          </h3>
-          <p>
-            We want you to enjoy your travels. This is why we don’t charge any
-            fees on purchases while you’re abroad. We’ll even show you …
-          </p>
-        </div>
-        <div>
+          <div class="card-text">
+            <h6>
+              By Wilson Hutton
+            </h6>
+            <h3 class="subtitle">
+              Take your Easybank card wherever you go
+            </h3>
+            <p class="p-section3">
+              We want you to enjoy your travels. This is why we don’t charge any
+              fees on purchases while you’re abroad. We’ll even show you …
+            </p>
+          </div>
+        </card>
+        <card class="card">
           <img alt="confetti" class="photo" src="images/image-confetti.jpg" />
-          <h6>
-            By Claire Robinson
-          </h6>
-          <h3>
-            Our invite-only
-          </h3>
-          <p>
-            Beta accounts are now live! After a lot of hard work by the whole
-            team, we’re excited to launch our closed beta. It’s easy to request
-            an invite through the site ...
-          </p>
-        </div>
+          <div class="card-text">
+            <h6>
+              By Claire Robinson
+            </h6>
+            <h3 class="subtitle">
+              Our invite-only
+            </h3>
+            <p class="p-section3">
+              Beta accounts are now live! After a lot of hard work by the whole
+              team, we’re excited to launch our closed beta. It’s easy to
+              request an invite through the site ...
+            </p>
+          </div>
+        </card>
       </div>
     </section>
     <footer>
       <div class="flex-container">
-        <div class="flex-container">
+        <div>
+          <img alt="easybank's logo" id="logo" src="/images/logo-white.svg" />
+        </div>
+        <div>
           <div>
-            <img alt="easybank's logo" id="logo" src="/images/logo-white.svg" />
+            <a>About Us</a>
+            <a>Contact</a>
+            <a>Blog</a>
           </div>
-          <div>
-            <div>
-              <a>About Us</a>
-              <a>Contact</a>
-              <a>Blog</a>
-            </div>
-            <div class="footer-links">
-              <a>Career</a>
-              <a>Support</a>
-              <a>Privacy Policy</a>
-            </div>
+          <div class="footer-links">
+            <a>Career</a>
+            <a>Support</a>
+            <a>Privacy Policy</a>
           </div>
         </div>
         <div>
