corrected size of nextGeneration div

--- a/easybank-landing-page-master/index.html
+++ b/easybank-landing-page-master/index.html
@@ -69,7 +69,7 @@
             src="images/image-mockups.png"
           />
         </div>
-        <div id="next-generation">
+        <div id="nextGeneration">
           <h1 id="main-title" class="title-color">
             Next generation digital banking
           </h1>
